--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
         const IconSun = ({ className }) => <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" className={className}><circle cx="12" cy="12" r="5"></circle><line x1="12" y1="1" x2="12" y2="3"></line><line x1="12" y1="21" x2="12" y2="23"></line><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line><line x1="1" y1="12" x2="3" y2="12"></line><line x1="21" y1="12" x2="23" y2="12"></line><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line></svg>;
         const IconMoon = ({ className }) => <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" className={className}><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path></svg>;
         const IconRefresh = ({ className }) => <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" className={className}><polyline points="23 4 23 10 17 10"></polyline><polyline points="1 20 1 14 7 14"></polyline><path d="M3.51 9a9 9 0 0 1 14.85-3.36L23 10M1 14l4.64 4.36A9 9 0 0 0 20.49 15"></path></svg>;
+        const IconDownload = ({ className }) => <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" className={className}><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="7 10 12 15 17 10"></polyline><line x1="12" y1="15" x2="12" y2="3"></line></svg>;
 
         // --- Utils ---
         const formatCurrency = (amount) => new Intl.NumberFormat('es-CO', { style: 'currency', currency: 'COP', minimumFractionDigits: 0 }).format(amount);
@@ -219,6 +220,33 @@
                 } finally {
                     setLoading(false);
                 }
+            };
+
+            // Exportar a CSV (Restaurado)
+            const exportToCSV = () => {
+                if (transactions.length === 0) {
+                    alert("No hay datos para exportar");
+                    return;
+                }
+                
+                const BOM = "\uFEFF"; 
+                const headers = "Fecha,Beneficiario,Descripción,Monto,TieneEvidencia\n";
+                const rows = transactions.map(t => {
+                    const desc = (t.description || '').replace(/"/g, '""');
+                    const ben = t.beneficiary.replace(/"/g, '""');
+                    const hasEv = (t.image || t.imagePath) ? 'Si' : 'No';
+                    return `${t.date},"${ben}","${desc}",${t.amount},${hasEv}`;
+                }).join("\n");
+
+                const csvContent = BOM + headers + rows;
+                const blob = new Blob([csvContent], { type: 'text/csv;charset=utf-8;' });
+                const url = URL.createObjectURL(blob);
+                const link = document.createElement("a");
+                link.setAttribute("href", url);
+                link.setAttribute("download", `pagos_export_${new Date().toISOString().split('T')[0]}.csv`);
+                document.body.appendChild(link);
+                link.click();
+                document.body.removeChild(link);
             };
 
             const saveToGithub = async (newTransactions, imageFile, imageName) => {
@@ -417,10 +445,13 @@
                                 </div>
                             </div>
                             <div className="flex gap-2">
-                                <button onClick={() => syncFromGithub()} className={`p-2 bg-white/20 hover:bg-white/30 rounded-lg backdrop-blur-sm transition-colors ${loading ? 'animate-spin' : ''}`}>
+                                <button onClick={exportToCSV} className="p-2 bg-white/20 hover:bg-white/30 rounded-lg backdrop-blur-sm transition-colors" title="Exportar Excel">
+                                    <IconDownload className="w-5 h-5" />
+                                </button>
+                                <button onClick={() => syncFromGithub()} className={`p-2 bg-white/20 hover:bg-white/30 rounded-lg backdrop-blur-sm transition-colors ${loading ? 'animate-spin' : ''}`} title="Sincronizar">
                                     <IconRefresh className="w-5 h-5" />
                                 </button>
-                                <button onClick={() => setIsSettingsOpen(true)} className="p-2 bg-white/20 hover:bg-white/30 rounded-lg backdrop-blur-sm transition-colors">
+                                <button onClick={() => setIsSettingsOpen(true)} className="p-2 bg-white/20 hover:bg-white/30 rounded-lg backdrop-blur-sm transition-colors" title="Configuración">
                                     <IconSettings className="w-5 h-5" />
                                 </button>
                             </div>
